syntax = "proto3";

package proto;

option go_package = "./internal/server/grpc/auth/proto;proto";

message TokenRequest {
    string session_token = 1;  
}

message UserResponse {
    string user_id = 1; 
    string role = 2;
}

message UserInformationRequest {
    string user_id = 1;
}

message UserInformationResponse {
    string fullname = 1;
    string email = 2;
    string phone = 3;
}

service AuthService {
    rpc Verify(TokenRequest) returns (UserResponse);
    rpc GetUserInformation(UserInformationRequest) returns(UserInformationResponse);
}
